<resources>
    <string name="app_name">UfcTestApp</string>
    <string name="suits_text">Свободные номера:</string>
    <string name="hotel_dist">Расстояние до центра - </string>
    <string name="sort_by_distance">Sort by Distance</string>
    <string name="sort_by_free_suits">Sort by free suits</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBQ9zyl5Vc6U_CYG82hedyT5q-JyMcXUSY</string>
    <string name="end_price">-</string>
    <string name="start_price">Начальная цена:</string>
    <string name="search_menu">Поиск</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="sort_menu_title">Sort</string>
    <string name="settings">Settings</string>
    <string name="sort_option_date">По названию</string>
    <string name="sort_option_apartCnt">По квартирам</string>
    <string name="sort_option_price">По цене</string>
    <string name="problem_text">Хьюстон, у нас проблемы !</string>
    <string name="retry_msg">ЕЩЕ РАЗ</string>
    <string name="title_activity_starter">StarterActivity</string>
    <string name="tab_text_1">WEIGHT CLASS</string>
    <string name="tab_text_2">A-Z</string>
    <string name="tab_text_3">RANKINGS</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
