<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.wen0m.sampleapp.listing.HouseListingActivity">

    <group android:id="@+id/general_album_items">
        <item
            android:id="@+id/search_action"
            android:title="@string/search_menu"

            android:icon="@mipmap/ic_search_white_24dp"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="ifRoom|collapseActionView" />

        <item
            android:id="@+id/sort_action"
            android:title="@string/sort_menu_title"
            android:icon="@mipmap/ic_filter_list_white_24dp"
            app:showAsAction="ifRoom">
        </item>
    </group>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>
